'the end of project'

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <title>Visit to France</title>
 </head>
 <body>
-    <header>
-        <h1>Discover France</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="grid-contener">
+
+    <div class="grid-contener" >
         
-        <div class="layout">
-            <h1>Exploring France</h1>
-        </div>
+
+            <header class="layout">
+                <h1>Discover France</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
         <main>
             <h1>Welcome to France</h1>
             <p>Experience the charm and beauty of France, from the Eiffel Tower to the French Riviera.</p>
@@ -49,6 +48,7 @@
         
         <aside>
             <h1>Travel Tips</h1>
+            <img src="./media/shutterstock_667548661v2.jpg" alt="France-img">
             <p>Get the best advice for your trip, including must-see attractions and local cuisine recommendations.</p>
         </aside>
         <footer>
